<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/sign_in_padding_layout">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/sign_in_padding_layout"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <com.dz.libraries.views.textviews.ExtTextView
            style="@style/StyleXXLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/welcome_to_crp"
            app:textViewFontAssetName="@string/font_bold_display" />

        <com.dz.libraries.views.textviews.ExtTextView
            style="@style/StyleNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/sign_in_padding_logo"
            android:layout_marginStart="@dimen/padding_content"
            android:padding="0dp"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/color_label" />

        <com.dz.customizes.views.edittexts.EditTextApp
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_layout"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="@integer/max_length_email"
            app:editTextAppContentColor="@color/color_black"
            app:editTextAppHint="@string/email"
            app:editTextAppHintColor="@color/color_label"
            app:editTextAppIconLeft="@drawable/ic_email"
            app:editTextAppIconRight="@drawable/ic_close_gray"
            app:editTextAppLabel="@string/email"
            app:editTextAppLineVisible="true"
            app:editTextInputLayout="true" />

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/tvForgotEmail"
            style="@style/StyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/bg_null_gray_selector"
            android:text="@string/forgot_email" />

        <com.dz.customizes.views.edittexts.EditTextApp
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_layout"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="@integer/max_length_password"
            app:editTextAppContentColor="@color/color_black"
            app:editTextAppHint="@string/password"
            app:editTextAppHintColor="@color/color_label"
            app:editTextAppIconLeft="@drawable/ic_pass"
            app:editTextAppIconRight="@drawable/ic_eye_disabled"
            app:editTextAppLabel="@string/password"
            app:editTextAppLineVisible="true"
            app:editTextInputLayout="true" />

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/tvForgotPassword"
            style="@style/StyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/padding_layout"
            android:background="@drawable/bg_null_gray_selector"
            android:text="@string/forgot_password_lower" />

        <com.dz.libraries.views.textviews.ExtTextView
            android:id="@+id/btnLogin"
            style="@style/ButtonPrimary"
            android:layout_marginBottom="@dimen/padding_layout"
            android:layout_marginTop="@dimen/padding_layout"
            android:text="@string/sign_in" />

        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:background="@drawable/bg_null_gray_selector"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_content">

            <com.dz.libraries.views.textviews.ExtTextView
                style="@style/StyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/create_account_description" />

            <com.dz.libraries.views.textviews.ExtTextView
                style="@style/StyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_content"
                android:padding="0dp"
                android:text="@string/sign_up"
                android:textColor="@color/color_pink"
                app:textViewFontAssetName="@string/font_bold_display" />
        </LinearLayout>

        <com.dz.libraries.views.textviews.ExtTextView
            style="@style/StyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivFacebook"
                style="@style/IconXLarge"
                android:layout_margin="@dimen/padding_layout"
                android:background="@drawable/bg_button_dropdown"
                android:padding="@dimen/padding_content"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivGoogle"
                style="@style/IconXLarge"
                android:layout_margin="@dimen/padding_layout"
                android:background="@drawable/bg_button_dropdown"
                android:padding="@dimen/padding_content"
                android:src="@drawable/ic_google"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivKakaoTalk"
                style="@style/IconXLarge"
                android:layout_margin="@dimen/padding_layout"
                android:background="@drawable/bg_button_dropdown"
                android:padding="@dimen/padding_content"
                android:src="@drawable/ic_kakao_talk"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivTelegram"
                style="@style/IconXLarge"
                android:layout_margin="@dimen/padding_layout"
                android:background="@drawable/bg_button_dropdown"
                android:padding="@dimen/padding_content"
                android:src="@drawable/ic_telegram"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>