<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/loading_layout" />

        <FrameLayout
            android:id="@+id/flContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View style="@style/LineHorizontal" />

        <LinearLayout
            android:id="@+id/llFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:gravity="center"
            android:orientation="horizontal">

            <com.dz.customizes.views.footers.FooterItem
                android:id="@+id/fiHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:footerItemContent="@string/home"
                app:footerItemIcon="@drawable/ic_home" />

            <com.dz.customizes.views.footers.FooterItem
                android:id="@+id/fiJustMinute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:footerItemContent="@string/just_a_minute"
                app:footerItemIcon="@drawable/ic_just_minute" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fiHomeMenu"
                    android:layout_width="@dimen/menu_home_size"
                    android:layout_height="@dimen/menu_home_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_content"
                    android:background="@drawable/bg_button_home"
                    android:elevation="@dimen/elevation_header"
                    android:padding="@dimen/padding_layout"
                    android:src="@drawable/ic_add" />
            </LinearLayout>

            <com.dz.customizes.views.footers.FooterItem
                android:id="@+id/fiContest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:footerItemContent="@string/contest"
                app:footerItemIcon="@drawable/ic_crown" />

            <com.dz.customizes.views.footers.FooterItem
                android:id="@+id/fiMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:footerItemContent="@string/menu"
                app:footerItemIcon="@drawable/ic_menu" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/network_layout" />
</merge>