<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_layout">

    <com.dz.libraries.views.shadowlayouts.ShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_layout"
        android:layout_marginLeft="@dimen/padding_layout"
        android:layout_marginRight="@dimen/padding_layout"
        android:background="@drawable/bg_white_radius_component"
        app:shadowLayoutShadowColor="@color/color_background"
        app:shadowLayoutShadowRadius="@dimen/radius_component">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_radius"
            android:padding="@dimen/padding_layout">

            <com.dz.customizes.views.edittexts.EditTextApp
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_border_gray_radius"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLength="@integer/max_length_text_search"
                app:editTextAppContentColor="@color/color_border"
                app:editTextAppHint="@string/search_by_name"
                app:editTextAppHintColor="@color/color_border"
                app:editTextAppIconLeft="@drawable/ic_search"
                app:editTextAppIconRight="@drawable/ic_close_circle_black"
                app:editTextAppLineVisible="false" />
        </LinearLayout>
    </com.dz.libraries.views.shadowlayouts.ShadowLayout>

    <com.dz.libraries.views.textviews.ExtTextView
        style="@style/StyleNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_layout"
        android:layout_marginTop="@dimen/padding_layout"
        android:padding="0dp"
        android:text="@string/recommended"
        app:textViewFontAssetName="@string/font_bold_display" />

    <com.dz.libraries.views.recyclerviews.ExtRecyclerView
        android:id="@+id/rvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.dz.libraries.views.textviews.ExtTextView
        android:id="@+id/tvConfirm"
        style="@style/ButtonWhiteBorderGray"
        android:layout_margin="@dimen/padding_layout"
        android:text="@string/confirm" />
</LinearLayout>